--- a/src/main/Readme
+++ b/src/main/Readme
@@ -7,3 +7,5 @@ Implemented global exception handler
 Implemented data bean validation
 Implemented pagination (Pagination is used to limit the number of records to be displayed in a single page, rest records will be displayed as per the pagination configuration)
 Spring Boot has all the support needed for pagination and sorting, since we extend JpaRepository, and JpaRepo can already accept Pageable
+Improvised Pagination response by creating a custom class to send response details as pageNumber, current page number, page size etc
+Implementing Sort By also, spring jpa provides support for sort by as well
