--- a/src/main/Readme
+++ b/src/main/Readme
@@ -11,3 +11,5 @@ Improvised Pagination response by creating a custom class to send response detai
 Implementing Sort By also, spring jpa provides support for sort by as well
 Implementing searching by title
 Implemented image upload and image serve API
+Implemented comments on a post
+Now going to implement securing Rest APIs with Spring Security
